--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,7 @@
-version: "3.8"
 
 services:
   web:
     build: .
     ports:
-      - "5000:5000"
-  jenkins:
-    build:
-      context: .
-      dockerfile: Dockerfile-jenkins
-    user: root
-    ports:
-      - "8080:8080"
-      - "50000:50000"
-    volumes:
-      - ./jenkins_home:/var/jenkins_home
-      - /var/run/docker.sock:/var/run/docker.sock
-    container_name: devops-jenkins
+      - "80:5000"
+    retart: always
